--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link
@@ -48,8 +49,10 @@
       <a class="ommigindex" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <img id="mobil" src="img/forsidem.webp" alt="Portfolio illustation" />
-      <img id="computer" src="img/forside.webp" alt="Portfolio illustration" />
+      <img id="mobil" src="img/forsidem.svg" alt="Portfolio illustation" />
+      <div class="container">
+        <img id="computer" src="img/logo.svg" alt="Portfolio illustration" />
+      </div>
     </main>
     <footer class="grid_1-1-1">
       <p>Portfolioeksamen</p>
