--- a/passion.html
+++ b/passion.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link
@@ -76,7 +77,7 @@
       <section class="baggrund1">
         <div class="grid_1-1">
           <div>
-            <h4>Metode</h4>
+            <h2>Metode</h2>
             <p>
               Jeg startede processen med at lave et xxxxx for at finde ud af
               hvilke frames jeg skulle have, da jeg skulle ud og filme. Da jeg
