--- a/spil.html
+++ b/spil.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link
@@ -79,7 +80,7 @@
       <section class="baggrund1">
         <div class="grid_1-1">
           <div>
-            <h3>Metode</h3>
+            <h2>Metode</h2>
             <p>
               For at finde ud af hvordan mit spil skulle se ud, lavede jeg
               forskellige øvelser, brainstorm og moodbords. Min idé var at lave
