--- a/spil.html
+++ b/spil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -100,7 +100,6 @@
               src="img/statemachinediagram.webp"
               alt="statemachine-diagrammer"
             />
-            <figcaption>State machine-diagram</figcaption>
           </div>
         </div>
       </section>
