--- a/website.html
+++ b/website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -96,10 +96,7 @@
           </div>
           <div>
             <img src="img/wireframe_website.png" alt="" />
-            <figcaption>Wireframe</figcaption>
-
             <img src="img/layoutdiagram_website.png" alt="" />
-            <figcaption>Layoutdiagram</figcaption>
           </div>
         </div>
       </section>
