--- a/emnesite.html
+++ b/emnesite.html
@@ -64,11 +64,11 @@
             produktudvikling.
           </p>
           <p>
-            Med emnesite opgaven i Tema 3 var vores mål at lave et fuldendt
-            website, hvor vi var med gennem hele processen. Opgacen havde til
-            formål at give erfaring med udvalgte UX/UI-metoder og lære at
-            præsentere vores design- og udviklingsproces samt formidle research-
-            og testresultater til interessenter.
+            I emnesite opgaven var vores mål at lave et fuldendt website, hvor
+            vi var med gennem hele processen. Opgacen havde til formål at give
+            erfaring med udvalgte UX/UI-metoder og lære at præsentere vores
+            design- og udviklingsproces samt formidle research- og
+            testresultater til interessenter.
           </p>
         </div>
       </section>
