--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <title>Forside</title>
   </head>
   <body>
-    <header class="grid_1-1">
+    <header class="grid_1-1-1">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -49,7 +49,9 @@
       <a class="ommigindex" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <img id="mobil" src="img/forsidem.svg" alt="Portfolio illustation" />
+      <div class="container1">
+        <img id="mobil" src="img/forsidem.svg" alt="Portfolio illustation" />
+      </div>
       <div class="container">
         <img id="computer" src="img/logo.svg" alt="Portfolio illustration" />
       </div>
