--- a/spil.html
+++ b/spil.html
@@ -66,14 +66,13 @@
             baggrundsdesign og kompositionsteknikker.
           </p>
           <p>
-            I Tema 4 opgaven skulle vi udvikle et spil som skulle have et
-            koncept og en idé, som vi selv fandt frem til. Vi designede
-            elementerne ud fra en selvvagt stil og kode spillet helt fra bunden.
-            Vi udviklede vores eget spildesign efter moderne konventioner og
-            rentegner grafikken til spillet i Adobe Illustrator. Gennem arbejdet
-            med vores eget spil lærer vi at arbejde med aktivitets- og
-            statemachine-diagrammer, som bruges til at planlægge det mere
-            komplicerede interaktive flow.
+            I spil opgaven skulle vi udvikle et spil som med et koncept og en
+            idé, som vi selv fandt på. Vi designede elementerne ud fra en
+            selvvagt stil og kode spillet helt fra bunden. Vi udviklede vores
+            eget spildesign efter moderne konventioner og rentegner grafikken
+            til spillet i Adobe Illustrator. Gennem arbejdet med vores eget spil
+            lærer vi at arbejde med aktivitets- og statemachine-diagrammer, som
+            bruges til at planlægge det mere komplicerede interaktive flow.
           </p>
         </div>
       </section>
