--- a/website.html
+++ b/website.html
@@ -64,9 +64,10 @@
             3.
           </p>
           <p>
-            For at vise vores at vi mestre de grundlæggende HTML og CSS, skulle
-            vi kode et site ud fra udleveret wireframes, layoutdiagram samt
-            indhold (billede og tekst) til at lave et færdigt responsivt design.
+            I website opgaven skulle vi vise at vi mestre de grundlæggende HTML
+            og CSS. Vi skulle kode et site ud fra udleveret wireframes,
+            layoutdiagram samt indhold (billede og tekst) til at lave et færdigt
+            responsivt design.
           </p>
         </div>
       </section>
