--- a/spil.html
+++ b/spil.html
@@ -37,11 +37,15 @@
         >
         <!-- navigation (overlay content)-->
         <div class="overlay-content">
-          <a href="website.html">Website</a>
-          <a href="emnesite.html">Emnesite</a>
-          <a href="spil.html">Spil</a>
-          <a href="passion.html">Passionsite</a>
-          <a href="virksomhedsite.html">Virksomhedsite</a>
+          <nav>
+            <ul>
+              <li><a href="website.html">Website</a></li>
+              <li><a href="emnesite.html">Emnesite</a></li>
+              <li><a href="spil.html">Spil</a></li>
+              <li><a href="passion.html">Passionsite</a></li>
+              <li><a href="virksomhedsite.html">Virksomhedsite</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
       <!-- knab til at vise overlay navigationen -->
@@ -111,11 +115,14 @@
               sig brugte jeg CSS-animation. For at få elementerne til at falde
               fra et tilfældigt sted på skærmen har brugt brugt functionen
               'rendNum' i JavaScript. Derefter gav jeg mine spil elementer
-              classen 'rndFaldPos'. Dette gøre ved at lave et antal
-              faldpositioner i CSS, i dette tilfælde 7 som sættes ind
-              functionen. til at få tiden til at løbe ud, få eller miste point
-              samt tænde og slukke for musikken mm.
+              classen 'rndFaldPos'. Dette gøres ved at lave et antal
+              faldpositioner i CSS, i dette tilfælde 7, som sættes ind i
+              functionen.
             </p>
+            <!-- <p>
+              til at få tiden til at løbe ud, få eller miste point samt tænde og
+              slukke for musikken mm.
+            </p> -->
           </div>
           <div class="grid_1-1">
             <img src="img/faldpos.webp" alt="" />
