--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -37,11 +37,15 @@
         >
         <!-- navigation (overlay content)-->
         <div class="overlay-content">
-          <a href="website.html">Website</a>
-          <a href="emnesite.html">Emnesite</a>
-          <a href="spil.html">Spil</a>
-          <a href="passion.html">Passionsite</a>
-          <a href="virksomhedsite.html">Virksomhedsite</a>
+          <nav>
+            <ul>
+              <li><a href="website.html">Website</a></li>
+              <li><a href="emnesite.html">Emnesite</a></li>
+              <li><a href="spil.html">Spil</a></li>
+              <li><a href="passion.html">Passionsite</a></li>
+              <li><a href="virksomhedsite.html">Virksomhedsite</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
       <!-- knab til at vise overlay navigationen -->
@@ -105,7 +109,7 @@
                 <p>
                   Til sidste i processen testede vi vores site med tænke-højt-
                   og heurisk test, for at se hvordan brugerne opfattede sitet.
-                  Vi lavede også en Lighthouse test for at se hvordan sitet
+                  Vi lavede også en Lighthouse test for at se hvordan sitet.
                 </p>
               </div>
               <div>
