--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="js/java.js"></script>
     <title>Forside</title>
   </head>
-  <body>
+  <body class="body">
     <header class="grid_1-1-1">
       <!-- overlay -->
       <div id="myNav" class="overlay">
@@ -37,11 +37,15 @@
         >
         <!-- navigation (overlay content)-->
         <div class="overlay-content">
-          <a href="website.html">Website</a>
-          <a href="emnesite.html">Emnesite</a>
-          <a href="spil.html">Spil</a>
-          <a href="passion.html">Passionsite</a>
-          <a href="virksomhedsite.html">Virksomhedsite</a>
+          <nav>
+            <ul>
+              <li><a href="website.html">Website</a></li>
+              <li><a href="emnesite.html">Emnesite</a></li>
+              <li><a href="spil.html">Spil</a></li>
+              <li><a href="passion.html">Passionsite</a></li>
+              <li><a href="virksomhedsite.html">Virksomhedsite</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
       <!-- knab til at vise overlay navigationen -->
