--- a/emnesite.html
+++ b/emnesite.html
@@ -94,10 +94,8 @@
           </div>
           <div>
             <img src="img/styletile.webp" alt="Styletile" />
-            <figcaption>Styletile</figcaption>
           </div>
         </div>
-        <img src="img/prototype_em.webp" alt="Prototype emnesite" />
       </section>
       <section class="baggrund1">
         <div class="grid_1-1">
@@ -118,11 +116,21 @@
               'break-inside: avoid;' for at billederne samler sig frem for at
               ligge på kolone linjerne.
             </p>
+            <p>
+              Derudover lavede vi forskellige test, her i blandt lighthouse
+              test, som er med til at vise hvor bæredygtig et website er. I
+              dette eksamen har jeg opfimeret mit galleri, som indeholde mange
+              store billeder, ved at gøre dem mindre.
+            </p>
           </div>
           <div>
+            <img src="img/prototype_em.webp" alt="Prototype emnesite" />
+            <img src="img/lighthouse.webp" alt="" />
+          </div>
+          <!-- <div>
             <img src="img/html_em.webp" alt="HTML struktur" />
             <img src="img/css_em.webp" alt="CSS struktur" />
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="baggrund">
