--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <title>Forside</title>
   </head>
   <body class="body">
-    <header class="grid_1-1-1">
+    <header class="grid_1-1">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -50,14 +50,18 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
-      <a class="ommigindex" href="ommig.html">Om mig</a>
+      <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
       <div class="container1">
         <img id="mobil" src="img/forsidem.svg" alt="Portfolio illustation" />
       </div>
       <div class="container">
-        <img id="computer" src="img/logo.svg" alt="Portfolio illustration" />
+        <img
+          id="computer"
+          src="img/forside1.svg"
+          alt="Portfolio illustration"
+        />
       </div>
     </main>
     <footer class="grid_1-1-1">
