--- a/ommig.html
+++ b/ommig.html
@@ -63,7 +63,23 @@
         <div class="grid_1-1">
           <img class="potrat" src="img/potrat.jpeg" alt="Potræt" />
           <div>
+            <p>
+              Jeg har er meget kreative og elsker at hækle, lave perler, sy mm.
+              Jeg er glad for mine hobbyer, da det er min måde at få ro på og
+              udtrykke mig selv. Jeg bliver inspireret til nye hobbyer og
+              projekter ude i verden, på internettet og gennem mine bekendte.
+              Udover mine hobbyer er jeg glad for at være sammen med mine
+              veninder og min familie.
+            </p>
             <h2>Uddanelse</h2>
+            <!-- <ol>
+              <li>Niels Brock Innovationsgymnasie</li>
+              <li>2017-2020</li>
+              <li>Cross Channel kursus - Magasin</li>
+              <li>2022</li>
+              <li>VERA skole for kunst og design</li>
+              <li>2023</li>
+            </ol> -->
             <p>
               Jeg har en studenter eksamen fra Niels Brock Innovationsgymnasie,
               hvor jeg gik på projektleder linjen. Her fik en god viden og
@@ -85,15 +101,6 @@
               i 2021, hvor jeg har haft en række forskelleige stillinger Sales
               and Service Assistent, Operational Sales Support og Visual Sales
               Support. Jeg stoppede i Magasin tilbage marts 2024.
-            </p>
-            <h2>Hobby</h2>
-            <p>
-              Jeg har mange kreative hobbyer, her ibland hækle, lave perler, sy
-              mm. Jeg er glad for mine hobbyer, da det er min måde at få ro på
-              og udtrykke mig selv. Jeg bliver inspireret til nye hobbyer og
-              projekter ude i verden, på internettet og gennem mine bekendte.
-              Udover mine hobbyer er jeg glad for at være sammen med mine
-              veninder og min familie.
             </p>
           </div>
         </div>
