--- a/prøve.html
+++ b/prøve.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/prøve.css" />
+    <script src="js/prøve.js"></script>
     <title>Document</title>
   </head>
   <body>
-    <header><h1>Prøve</h1></header>
+    <header>
+      <header class="grid_1-1-1">
+        <!-- overlay -->
+        <div id="myNav" class="overlay">
+          <!-- knap til at lukke overlay navigationen -->
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >&times;</a
+          >
+          <!-- navigation (overlay content)-->
+          <div class="overlay-content">
+            <nav>
+              <ul>
+                <li><a href="website.html">Website</a></li>
+                <li><a href="emnesite.html">Emnesite</a></li>
+                <li><a href="spil.html">Spil</a></li>
+                <li><a href="passion.html">Passionsite</a></li>
+                <li><a href="virksomhedsite.html">Virksomhedsite</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <!-- knab til at vise overlay navigationen -->
+        <span><p id="open">Projekter</p></span>
+        <span onclick="openNav()"> </span>
+        <a class="logo" href="index.html"
+          ><img src="img/forside.webp" alt="Logo"
+        /></a>
+        <a class="ommig" href="ommig.html">Om mig</a>
+      </header>
+    </header>
     <main>
       <div class="og">
         <h1>hej</h1>
