Slet class ommig

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
-      <a class="ommig" href="ommig.html">Om mig</a>
+      <a href="ommig.html">Om mig</a>
     </header>
     <main>
       <div class="container1">
