--- a/prøve.html
+++ b/prøve.html
@@ -35,7 +35,7 @@
         <a class="logo" href="index.html"
           ><img src="img/forside.webp" alt="Logo"
         /></a>
-        <a class="ommig" href="ommig.html">Om mig</a>
+        <a href="ommig.html">Om mig</a>
       </header>
     </header>
     <main>
