--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -53,7 +53,7 @@
       <a class="logo" href="index.html"
         ><img src="img/forside.webp" alt="Logo"
       /></a>
-      <a class="ommig" href="ommig.html">Om mig</a>
+      <a href="ommig.html">Om mig</a>
     </header>
     <main>
       <section class="baggrund">
