--- a/spil.html
+++ b/spil.html
@@ -53,7 +53,7 @@
       <a class="logo" href="index.html"
         ><img src="img/forside.webp" alt="Logo"
       /></a>
-      <a href="ommig.html">Om mig</a>
+      <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
       <section class="baggrund">
@@ -148,7 +148,7 @@
             <h4>Nye kompenancer</h4>
             <ul class="icon">
               <li>CSS-animation</li>
-              <li>illustrator</li>
+              <li>Illustrator</li>
               <li>JavaScript</li>
             </ul>
           </div>
