--- a/ommig.html
+++ b/ommig.html
@@ -61,7 +61,7 @@
       </section>
       <section class="baggrund">
         <div class="grid_1-1">
-          <img class="potrat" src="img/potrat.jpeg" alt="Potræt" />
+          <img class="potrat" src="img/potrat.webp" alt="Potræt" />
           <div>
             <p>
               Jeg har er meget kreative og elsker at hækle, lave perler, sy mm.
