ny svg til forside

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="container">
         <img
           id="computer"
-          src="img/forside1.svg"
+          src="img/forside_2.svg"
           alt="Portfolio illustration"
         />
       </div>
