--- a/emnesite.html
+++ b/emnesite.html
@@ -141,7 +141,7 @@
               class="website"
               href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
               target="_blank"
-              >Website <i class="arrow"></i
+              >Emnesite<i class="arrow"></i
             ></a>
           </div>
           <div>
