--- a/passion.html
+++ b/passion.html
@@ -111,7 +111,7 @@
               class="website"
               href="https://idaholmterp.dk/kea/05_indhold/passionsite/index.html"
               target="_blank"
-              >Website <i class="arrow"></i
+              >Passionsite<i class="arrow"></i
             ></a>
           </div>
           <div>
