--- a/spil.html
+++ b/spil.html
@@ -141,7 +141,7 @@
               class="website"
               href="https://idaholmterp.dk/kea/04_animation/website/index.html"
               target="_blank"
-              >Website <i class="arrow"></i
+              >Spil<i class="arrow"></i
             ></a>
           </div>
           <div>
