--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -128,7 +128,7 @@
               class="website"
               href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
               target="_blank"
-              >Website <i class="arrow"></i
+              >Virksomhedsite<i class="arrow"></i
             ></a>
           </div>
           <div>
