--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <title>Forside</title>
   </head>
   <body class="body">
-    <header class="grid_1-1">
+    <header class="grid_1-1-1">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -50,6 +50,9 @@
       </div>
       <!-- knab til at vise overlay navigationen -->
       <span onclick="openNav()">Projekter</span>
+      <a class="logo" href="index.html"
+        ><img src="img/forside.webp" alt="Logo"
+      /></a>
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
