--- a/website.html
+++ b/website.html
@@ -122,6 +122,8 @@
               <li>HTML</li>
               <li>CSS</li>
               <li>Figma</li>
+              <li>Designprincipper</li>
+              <li>Gestaltlove</li>
             </ul>
           </div>
         </div>
