--- a/emnesite.html
+++ b/emnesite.html
@@ -28,7 +28,7 @@
     <title>Emnesite</title>
   </head>
   <body>
-    <header class="grid_1-1-1">
+    <header class="grid_1-1-1f">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -69,7 +69,7 @@
           </p>
           <p>
             I emnesite opgaven var vores mål at lave et fuldendt website, hvor
-            vi var med gennem hele processen. Opgacen havde til formål at give
+            vi var med gennem hele processen. Opgaven havde til formål at give
             erfaring med udvalgte UX/UI-metoder og lære at præsentere vores
             design- og udviklingsproces samt formidle research- og
             testresultater til interessenter.
@@ -81,10 +81,10 @@
           <div>
             <h2>Metode</h2>
             <p>
-              I starten af processen for emnesitet gik vi igang med idégenering
+              I starten af processen for emnesitet gik jeg igang med idégenering
               som tog form af en brainstorm for emnet på sitete. Her valgte jeg
-              emnet hækle. Derefter gik vi igang med at udforme ideèn i form af
-              moodboard og stylyetile, for at finde udtrykket for sitet.
+              emnet hækle. For at finde udtrykket og stilen for sitet lavede jeg
+              moodboards og styletile.
             </p>
             <p>
               Efter at havde lavet research, lavede jeg en digital klikbar
@@ -100,14 +100,14 @@
       <section class="baggrund1">
         <div class="grid_1-1">
           <div>
-            <p>
+            <!-- <p>
               Udfra min digitale prototype begyndte jeg at kode mit site med
-              html og css. Html for at lave strukturen i sitet og css for at
+              HTML og CSS. Html for at lave strukturen i sitet og css for at
               style og lave layout. Ny css jeg lærte i dette tema var at
               implementere fonte og at lave et dynamisk galleri, hvor billederne
               blender sammen frem for at blive inde for grid linjerne.
-            </p>
-            <p>
+            </p> -->
+            <!-- <p>
               I HTML gives sektionen for galleriet klassen 'container' og
               billederne klassen 'galleri'. I CSS bruges klasserne så ledes
               'container' bruges til at definere breden, koloner og kolone
@@ -115,12 +115,15 @@
               billederne, mellemrum fra billede til billede og til sidst
               'break-inside: avoid;' for at billederne samler sig frem for at
               ligge på kolone linjerne.
-            </p>
+            </p> -->
             <p>
-              Derudover lavede vi forskellige test, her i blandt lighthouse
-              test, som er med til at vise hvor bæredygtig et website er. I
-              dette eksamen har jeg opfimeret mit galleri, som indeholde mange
-              store billeder, ved at gøre dem mindre.
+              En del af dette tema var test. Hvor vi blandt andet lavede 5
+              sekunders test, tænkehøjt test og eksperttest. Billede 3 viser min
+              lighthouse test, hvor jeg fokuserede på at få min preformence
+              bedre. Dette gjorde jeg ved at optimere mit galleri, som
+              indeholdee mange store billeder, ved at gøre dem mindre. I de
+              senere opgaver har jeg også konveteret billederne til WebP, for at
+              gøre billederne mindre tungt og optimere indlæsningstiden.
             </p>
           </div>
           <div>
