--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <title>Forside</title>
   </head>
   <body class="body">
-    <header class="grid_1-1-1">
+    <header class="grid_1-1-1f">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
