--- a/ommig.html
+++ b/ommig.html
@@ -28,7 +28,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="grid_1-1-1">
+    <header class="grid_1-1-1f">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -60,53 +60,50 @@
         <h1>Om mig</h1>
       </section>
       <section class="baggrund">
-        <div class="grid_1-1">
-          <img class="potrat" src="img/potrat.webp" alt="Potræt" />
+        <div class="grid_1-1-1">
+          <div><img class="potrat" src="img/potrat.webp" alt="Potræt" /></div>
           <div>
-            <p>
-              Jeg har er meget kreative og elsker at hækle, lave perler, sy mm.
-              Jeg er glad for mine hobbyer, da det er min måde at få ro på og
-              udtrykke mig selv. Jeg bliver inspireret til nye hobbyer og
-              projekter ude i verden, på internettet og gennem mine bekendte.
-              Udover mine hobbyer er jeg glad for at være sammen med mine
-              veninder og min familie.
-            </p>
-            <h2>Uddanelse</h2>
-            <!-- <ol>
+            <h3>Uddanelse</h3>
+            <ol>
               <li>Niels Brock Innovationsgymnasie</li>
               <li>2017-2020</li>
               <li>Cross Channel kursus - Magasin</li>
               <li>2022</li>
               <li>VERA skole for kunst og design</li>
               <li>2023</li>
-            </ol> -->
+            </ol>
+          </div>
+          <div>
+            <h3>Erfaring</h3>
+            <ol>
+              <li>Enghave kaffe</li>
+              <li>2017-2019</li>
+              <li>Flying Tiger Copenhagen</li>
+              <li>2018-2020</li>
+              <li>Føtex</li>
+              <li>2020-2021</li>
+              <li>Magasin</li>
+              <li>2021-2024</li>
+            </ol>
+          </div>
+        </div>
+        <div class="grid_1-2">
+          <div>
+            <h2>Hvem er jeg?</h2>
             <p>
-              Jeg har en studenter eksamen fra Niels Brock Innovationsgymnasie,
-              hvor jeg gik på projektleder linjen. Her fik en god viden og
-              kendskab til virksomheds opbygning og økonomi. Derudover har jeg i
-              forbindelse med min stilling som Sales and Servies Assistent i
-              Magasin, taget et kursus i cross channel, som giver 5 ETCS point.
-              Jeg har også været på dagshøjskolen VERA, hvor jeg havde grafisk
-              kommunikation som fag, dette har været med til at give mig blod på
-              tanden inde for grafisk design faget. Jeg er startet på
-              multimediedesign på KEA, i januar 2024 og bliver færdig januar
-              2026.
-            </p>
-            <h2>Erfaring</h2>
-            <p>
-              Jeg har i mange år arbejdet i butik. Jeg startede på en kaffebar
-              tilbage i xxxx, på sammen tid fik jeg arbejde i Flying Tiger, hvor
-              jeg både var som salgsassistent under 18 og blev lukkeansvarlig
-              som over 18. Dette arbejde blev dog skiftet ud med Magasin tilbage
-              i 2021, hvor jeg har haft en række forskelleige stillinger Sales
-              and Service Assistent, Operational Sales Support og Visual Sales
-              Support. Jeg stoppede i Magasin tilbage marts 2024.
+              Jeg er meget kreative og elsker at hækle, lave perler, sy mm. Jeg
+              er glad for mine hobbyer, da det er min måde at få ro på og
+              udtrykke mig selv. Jeg bliver inspireret til nye hobbyer og
+              projekter ude i verden, på internettet og gennem mine bekendte.
+              Udover mine hobbyer er jeg glad for at være sammen med mine
+              veninder og min familie.
             </p>
           </div>
+          <div><img src="img/hobby.webp" alt="" /></div>
         </div>
       </section>
     </main>
-    <footer class="grid_1-1-1">
+    <footer class="grid_1-1-1f">
       <p>Portfolioeksamen</p>
       <p>2024</p>
       <p>Ida Holm Terp</p>
