--- a/passion.html
+++ b/passion.html
@@ -28,7 +28,7 @@
     <title>Passionsite</title>
   </head>
   <body>
-    <header class="grid_1-1-1">
+    <header class="grid_1-1-1f">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -61,17 +61,17 @@
         <div class="baggrund2">
           <div>
             <p>
-              I Tema 5 fik vi grundlæggende indførsel i indholdsproduktion,
+              I Tema 5 fik vi grundlæggende forståelse i indholdsproduktion,
               herunder præproduktion, selve produktionen samt postproduktion. Vi
               benytter smartphonekameraer til optagelse af video og ekstern lyd
               og anvender Premiere Pro til redigering. Vi arbejde også med
-              animeret vektorgrafik (Lottiefiles).
+              animeret vektorgrafik og formatet Lottiefiles.
             </p>
             <p>
-              I passions opgaven var vores mål at lære at forberede og filme en
-              video ud fra 5-shot-sequence fortællemodellen, som bruges for at
-              få en mere dynamisk og spændene video. Vi lærte at bruge
-              PrimerePro til at redigere, After Effect til animation og
+              I passionssite opgaven var vores mål at lære at forberede og filme
+              en video ud fra 5-shot-sequence fortællemodellen, som bruges for
+              at få en mere dynamisk og spændene video. Vi lærte at bruge
+              Premiere Pro til at redigere, After Effect til animation og
               LottieFile som format, som vi brugte i virksomhedsside opgaven i
               Tema 5.
             </p>
@@ -83,21 +83,18 @@
           <div>
             <h2>Metode</h2>
             <p>
-              Jeg startede processen med at lave et xxxxx for at finde ud af
-              hvilke frames jeg skulle have, da jeg skulle ud og filme. Da jeg
-              havde været ud og filme, begyndt jeg at at klippe i Primerie
-              pro?????. Som vi blev introduceret til med nogle små klippe
-              opgaver.
+              Jeg startede processen med at lave et storyboard for at finde ud
+              af hvilke frames jeg skulle have, da jeg skulle ud og filme. Da
+              jeg havde været ud og filme, begyndt jeg at at klippe i Premiere
+              Pro.
             </p>
             <p>
-              Efter at havde klippet videoen, ud fra de krav der var givet af
-              lærene. Satte jeg websitet op ud fra det wireframe som var
-              udleveret af lærene her implementeret jeg videoen både direkte på
-              sitet med HTML og som video fra Youtube. Derudover skulle jeg lave
-              en LottieFile som en herosection. Lottiefile er lavet i
-              Aftereffect og oploadet på Lottiefile og implementeret på siden
-              den vej igennem, dette gør at filen ikke fylder lige så meget som
-              hvis det var en video.
+              Efter at havde klippet videoen. Satte jeg websitet op ud fra det
+              de udleveret wireframe. Her implementeret jeg videoen både direkte
+              på sitet med HTML og som video fra Youtube. Derudover lavede jeg
+              en LottieFile som skulle være i min herosection. Lottiefile er
+              animeret i After Effects og konveteret til formatet LottieFile,
+              som er med til at gøre filformatet mindre..
             </p>
           </div>
           <img src="img/video.webp" alt="Frames" />
@@ -118,8 +115,9 @@
             <h4>Nye kompenancer</h4>
             <ul class="icon">
               <li>Implementering af video i HTML</li>
-              <li>Primerie pro</li>
-              <li>Aftereffect</li>
+              <li>Premiere Pro</li>
+              <li>After Effects</li>
+              <li>Animeret vektorgrafik</li>
               <li>LottieFile</li>
             </ul>
           </div>
