--- a/spil.html
+++ b/spil.html
@@ -28,7 +28,7 @@
     <title>Spil</title>
   </head>
   <body>
-    <header class="grid_1-1-1">
+    <header class="grid_1-1-1f">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -61,19 +61,19 @@
         <div class="baggrund2">
           <p>
             I Tema 4 blev vi introduceret til programmeringssproget JavaScript,
-            som kan bruges til at kode dynamiske websites. I dette tema brugte
-            vi JavaScript i samspil med CSS-animationer til at skabe et lille
-            spil. Formålet med dette tema var, at vi begynder at arbejde
-            professionelt med formgivning af grafiske elementer. Vi analyserede
-            spildesign og undersøgte, hvordan man engagerer brugere gennem teori
-            og konventioner inden for UI-elementer, figurelementer,
-            baggrundsdesign og kompositionsteknikker.
+            som bruges til at kode dynamiske websites. I dette tema brugte vi
+            JavaScript i samspil med CSS-animationer til at skabe et lille spil.
+            Formålet med dette tema var, at vi begynder at arbejde professionelt
+            med formgivning af grafiske elementer. Vi analyserede spildesign og
+            undersøgte, hvordan man engagerer brugere gennem teori og
+            konventioner inden for UI-elementer, figurelementer, baggrundsdesign
+            og kompositionsteknikker.
           </p>
           <p>
             I spil opgaven skulle vi udvikle et spil som med et koncept og en
             idé, som vi selv fandt på. Vi designede elementerne ud fra en
             selvvagt stil og kode spillet helt fra bunden. Vi udviklede vores
-            eget spildesign efter moderne konventioner og rentegner grafikken
+            eget spildesign efter moderne konventioner og rentegnede grafikken
             til spillet i Adobe Illustrator. Gennem arbejdet med vores eget spil
             lærer vi at arbejde med aktivitets- og statemachine-diagrammer, som
             bruges til at planlægge det mere komplicerede interaktive flow.
@@ -87,8 +87,7 @@
             <p>
               For at finde ud af hvordan mit spil skulle se ud, lavede jeg
               forskellige øvelser, brainstorm og moodbords. Min idé var at lave
-              et spil med køer og alien, som også referere til en del af vores
-              popkultur.
+              et spil med køer og alien.
             </p>
             <p>
               Efter at havde fundet en idé til spillet med gode og dårlige
@@ -111,18 +110,13 @@
           <div>
             <p>
               Ud fra aktivitetdiagrammet og statemachine-diagrammet begyndt jeg
-              at progræmere spillet. For at få spil elementerne til at besvæge
-              sig brugte jeg CSS-animation. For at få elementerne til at falde
-              fra et tilfældigt sted på skærmen har brugt brugt functionen
-              'rendNum' i JavaScript. Derefter gav jeg mine spil elementer
-              classen 'rndFaldPos'. Dette gøres ved at lave et antal
-              faldpositioner i CSS, i dette tilfælde 7, som sættes ind i
-              functionen.
+              at programmere spillet. For at få spil elementerne til at besvæge
+              sig brugte jeg CSS-animation. For at få elementerne til at flaed
+              ned fra skærmen et tilfældigt sted, satte definerede jeg
+              functionen 'rndNum' i JavaScript. Derefter gav jeg mine spil
+              elementer classen 'rndFaldPos', og bede den tilfældigt vælge en af
+              de 7 anvivende positioner.
             </p>
-            <!-- <p>
-              til at få tiden til at løbe ud, få eller miste point samt tænde og
-              slukke for musikken mm.
-            </p> -->
           </div>
           <div class="grid_1-1">
             <img src="img/faldpos.webp" alt="" />
@@ -150,6 +144,8 @@
               <li>CSS-animation</li>
               <li>Illustrator</li>
               <li>JavaScript</li>
+              <li>Aktivitetdiagram</li>
+              <li>Statemachine-diagram</li>
             </ul>
           </div>
         </div>
