--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -74,7 +74,7 @@
             i form af fx tekst, foto, LottieFiles og video. Dette var et
             gruppeprojekt. Vi var alle indover de fleste dele af opgaven, men
             jeg stod for kodningen af index.html og omos.html samt en del
-            illutations arbejdet i Illustrator.
+            illutations arbejde i Illustrator.
           </p>
         </div>
       </section>
@@ -104,12 +104,13 @@
                 <p>
                   Da vi skulle kode vores site, brugte vi GitHub for at hele
                   gruppen kunne kode i samme mappe, og vi hele tiden kunne følge
-                  med i hvad de andre havde lavte.
+                  med i hvad de andre havde lavet.
                 </p>
                 <p>
                   Til sidste i processen testede vi vores site med tænke-højt-
                   og heurisk test, for at se hvordan brugerne opfattede sitet.
-                  Vi lavede også en Lighthouse test for at se hvordan sitet.
+                  Vi lavede også en Lighthouse test for at se hvordan sitet
+                  presterede for søgemaskinen.
                 </p>
               </div>
               <div>
