--- a/website.html
+++ b/website.html
@@ -28,7 +28,7 @@
     <title>Website</title>
   </head>
   <body>
-    <header class="grid_1-1-1">
+    <header class="grid_1-1-1f">
       <!-- overlay -->
       <div id="myNav" class="overlay">
         <!-- knap til at lukke overlay navigationen -->
@@ -65,7 +65,7 @@
             en respontiv website som også fungerede som studiestarts prøve.
             Derudover blev vi introduceret til de grundlæggende færdigheder i
             grafisk opsætning af tekst og billeder i Figma, som vi brugte i Tema
-            3.
+            3 og 5.
           </p>
           <p>
             I website opgaven skulle vi vise at vi mestre de grundlæggende HTML
@@ -81,17 +81,18 @@
             <h2>Metode</h2>
             <p>
               Jeg opbyggede og stylede websitet med udleveret indhold. Dette
-              gjorde jeg ved brugt af HTML til indholdet og CSS til at lave
-              layout ud fra udleveret wireframes og layoutdiagram. Wireframes og
-              layoutdiagram er med til at hjælpe programøren til hvordan sitet
-              skal opbygges, og gør det derudover mere overskueligt når man skal
-              gå fra prototype til kodet site.
+              gjorde jeg ved brugt af HTML til at strukturen af indholdet og CSS
+              til at lave layout ud fra udleveret wireframes og layoutdiagram.
+              Wireframes og layoutdiagram er med til at hjælpe programmøren til
+              hvordan sitet skal opbygges, og mere overskueligt når man skal gå
+              fra prototype til kodet site.
             </p>
             <p>
-              HTML bliver brugt til skruktur igennem HTML sectioner, div og
-              classes og for at indsætte tekst og billeder. Ved brug af CSS
-              definerede jeg grid, layout samt design med farve, font-family
-              samt media quries for at gøre websitet responsivt.
+              HTML bliver brugt til skruktur af tekst og billeder, igennem HTML
+              sectioner, div og classes kan man bruge CSS til grid, strørrelse
+              mm. Ved brug af CSS definerede jeg grid, layout samt design med
+              farve, font-family samt media quries for at gøre websitet
+              responsivt.
             </p>
             <p>
               I det efterfølegende projekter har jeg videre brugt HTML og CSS,
