--- a/website.html
+++ b/website.html
@@ -130,7 +130,7 @@
         </div>
       </section>
     </main>
-    <footer class="grid_1-1-1">
+    <footer class="grid_1-1-1f">
       <p>Portfolioeksamen</p>
       <p>2024</p>
       <p>Ida Holm Terp</p>
