--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         />
       </div>
     </main>
-    <footer class="grid_1-1-1">
+    <footer class="grid_1-1-1f">
       <p>Portfolioeksamen</p>
       <p>2024</p>
       <p>Ida Holm Terp</p>
