Nyt billede ommig

--- a/ommig.html
+++ b/ommig.html
@@ -71,6 +71,8 @@
               <li>2022</li>
               <li>VERA skole for kunst og design</li>
               <li>2023</li>
+              <li>KEA Multimediedesign</li>
+              <li>2024-</li>
             </ol>
           </div>
           <div>
