--- a/website.html
+++ b/website.html
@@ -64,8 +64,8 @@
             færdigheder brugte vi til først at lave mobilsite, for derefter lav
             en respontiv website som også fungerede som studiestarts prøve.
             Derudover blev vi introduceret til de grundlæggende færdigheder i
-            grafisk opsætning af tekst og billeder i Figma, som vi brugte i Tema
-            3 og 5.
+            grafisk opsætning af tekst og billeder i Figma, som vi senere brugte
+            i Tema 3 og 5.
           </p>
           <p>
             I website opgaven skulle vi vise at vi mestre de grundlæggende HTML
