--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -28,7 +28,7 @@
     <title>Virksomhedsite</title>
   </head>
   <body>
-    <header class="grid_1-1-1">
+    <header class="grid_1-1-1f">
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
@@ -120,7 +120,7 @@
       <section class="baggrund">
         <div class="grid_1-1">
           <div>
-            <h4>Se det færdige produkt her:</h4>
+            <h3>Se det færdige produkt her:</h3>
             <a
               class="website"
               href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
@@ -129,7 +129,7 @@
             ></a>
           </div>
           <div>
-            <h4>Nye kompenancer</h4>
+            <h3>Nye kompenancer</h3>
             <ul class="icon">
               <li>Gruppearbejde</li>
               <li>Redesign</li>
@@ -140,7 +140,7 @@
         </div>
       </section>
     </main>
-    <footer class="grid_1-1-1">
+    <footer class="grid_1-1-1f">
       <p>Portfolioeksamen</p>
       <p>2024</p>
       <p>Ida Holm Terp</p>
