--- a/emnesite.html
+++ b/emnesite.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -92,8 +92,6 @@
             <img src="img/styletile.webp" alt="Styletile" />
           </div>
         </div>
-      </section>
-      <section class="baggrund1">
         <div class="grid_1-1">
           <div>
             <p>
