Png til webp billeder

--- a/website.html
+++ b/website.html
@@ -97,8 +97,8 @@
             </p>
           </div>
           <div>
-            <img src="img/wireframe_website.png" alt="" />
-            <img src="img/layoutdiagram_website.png" alt="" />
+            <img src="img/wireframe_website.webp" alt="" />
+            <img src="img/layoutdiagram_website.webp" alt="" />
           </div>
         </div>
       </section>
