--- a/ommig.html
+++ b/ommig.html
@@ -89,12 +89,13 @@
           <div>
             <h2>Hvem er jeg?</h2>
             <p>
-              Jeg er meget kreative og elsker at hækle, lave perler, sy mm. Jeg
-              er glad for mine hobbyer, da det er min måde at få ro på og
-              udtrykke mig selv. Jeg bliver inspireret til nye hobbyer og
-              projekter ude i verden, på internettet og gennem mine bekendte.
-              Udover mine hobbyer er jeg glad for at være sammen med mine
-              veninder og min familie.
+              Jeg er 23 år og bor på Amagerbro. Jeg er meget kreative og elsker
+              at hækle, lave perler, sy mm. Jeg er glad for mine hobbyer, da det
+              er min måde at få ro på og udtrykke mig selv. Jeg bliver
+              inspireret nye projekter ude i verden, på sociale medier og gennem
+              mine bekendte. Udover mine hobbyer er jeg glad for at være sammen
+              med mine veninder og min familie. Jeg elsker at tage på ferie og
+              spille golf med min far og lillebror.
             </p>
           </div>
           <div><img src="img/hobby.webp" alt="" /></div>
