--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <body class="body">
     <header class="grid_1-1-1f">
       <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-          >&times;</a
-        >
+        <!-- knap til at lukke overlay navigationen -->
+        <a class="closebtn">&times;</a>
+        <!-- navigation (overlay content)-->
         <div class="overlay-content">
           <nav>
             <ul>
@@ -45,7 +45,8 @@
           </nav>
         </div>
       </div>
-      <span onclick="openNav()">Projekter</span>
+      <!-- knab til at vise overlay navigationen -->
+      <span id="openNavBtn">Projekter</span>
       <a class="logo" href="index.html"
         ><img src="img/forside.webp" alt="Logo"
       /></a>
